fix:scrollbar removed from body

--- a/styles.css
+++ b/styles.css
@@ -57,18 +57,7 @@ a {
   text-decoration: none;
   color: inherit;
 }
-/* Scroll Bar */
-body::-webkit-scrollbar {
-  width: 8px;
-  height: 8px;
-}
-body:-webkit-scrollbar-track {
-  background: transparent;
-}
-body::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  background: var(--red);
-}
+
 /* Navigation bar */
 .navbar {
   position: fixed;
